# karlhanslorenz-met0310_av

./: .gitignore  .gitmodules  README.md  hello.txt
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/map/: mymap.pgm
src/my_gazebo/: CMakeLists.txt  package.xml
src/my_gazebo/launch/: description.launch.xml  my_plaza.launch  r2d2_navigation.launch  r2d2_remote.launch  r2d2_slam.launch  r2d2_world.launch
src/my_gazebo/map/: maze_map.pgm
src/my_gazebo/models/my_plaza/: model.sdf
src/my_gazebo/worlds/: my_plaza.world
src/r2d2/: CMakeLists.txt  package.xml
src/r2d2/config/: r2d2.rviz
src/r2d2/launch/: r2d2.launch
src/r2d2/urdf/: r2d2.urdf.xacro
src/r2d2_navigator/: package.xml
src/robomower/: CMakeLists.txt  package.xml
urdf/: r2d2.rviz  r2d2.urdf  r2d2.urdf.xacro  r2d2.xacro  r2d2_1.urdf
